More tests and some bug fixes